# colorfulpp

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: cmake.yml
data/: nippon_colors.json  tradition_chinese.json
src/: __main__.py  cli.cpp  colorfulpp.mpp
src/colorfulpp/: colorfulpp.py
tests/: test.py  test_main.cpp
